# Fastapi-Docker-Boilerplate

./: docker-compose.yml
src/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
src/app/: main.py
src/app/core/: config.py
src/app/core/authentication/: router.py  security.py  users.py
src/docker/: gunicorn_conf.py
src/tests/: test_main.py
